--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/ylsp_server?useSSL=false
+spring.datasource.url=jdbc:mysql://localhost:3306/ylsp_server?allowPublicKeyRetrieval=true&useSSL=false
 spring.datasource.username=root
 spring.datasource.password=010203Rus@
 
